Begin to program algorithm 'follow wall' with controller.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "blemasle/arduino-mcp23017"]
 	path = robot-control-src/libraries/MCP23017
 	url = https://github.com/blemasle/arduino-mcp23017.git
+[submodule "imax9000/Arduino-PID-Library"]
+	path = robot-control-src/libraries/Arduino-PID-Library
+	url = https://github.com/imax9000/Arduino-PID-Library.git
